# mnotify

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cmd_login.go  cmd_logout.go  cmd_room.go  cmd_send.go  cmd_synapse.go  cmd_sync.go  cmd_user.go  config.go  flake.nix  go.mod  go.sum  helper.go  main.go  statecache.go
.github/: dependabot.yml
.github/workflows/: cargo.yml  gotest.yml
contrib/: sendmail
src/: base64.rs  client.rs  config.rs  dbus.rs  main.rs  mime.rs  outputs.rs  sas.rs  session.rs  terminal.rs  util.rs
src/client/: builder.rs  login.rs  mod.rs  room.rs  sas.rs  session.rs
