[package]
name = "mnotify"
version = "0.1.0"
edition = "2021"
keywords = ["matrix", "chat", "messaging", "cli"]
readme = "README.md"
repository = "https://github.com/rumpelsepp/mnotify"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
base64 = "0.21.0"
clap = { version = "4.1.6", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.0.1"
futures = "0.3.26"
is-terminal = "0.4.4"
keyring = "2.0.1"
log = "0.4.17"
mime = "0.3.16"
prompts = "0.1.0"
rpassword = "7.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
xdg = "2.4.1"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
branch = "main"
default-features = false
features = ["e2e-encryption", "sled", "markdown", "socks", "anyhow", "image-proc"]
 
[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.0.2"

[[bin]]
name = "mn"
path = "src/main.rs"

[features]
default = ["rustls-tls"]
native-tls = ["matrix-sdk/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls"]
