[package]
name = "mnotify"
version = "0.1.0"
edition = "2021"
keywords = ["matrix", "chat", "messaging", "cli"]
readme = "README.md"
repository = "https://github.com/rumpelsepp/mnotify"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
base64 = "0.21.0"
clap = { version = "4.2.7", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.0.1"
futures = "0.3.26"
is-terminal = "0.4.4"
keyring = "2.0.1"
log = "0.4.17"
matrix-sdk-crypto = "0.7.0"
mime = "0.3.17"
prompts = "0.1.0"
reqwest = { version = "0.11.23", features = ["native-tls-vendored"] }
rpassword = "7.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
xdg = "2.4.1"

[dependencies.matrix-sdk]
version = "0.7.0"
default-features = false
features = ["e2e-encryption", "markdown", "socks", "anyhow", "image-proc", "experimental-sliding-sync", "sqlite", "bundled-sqlite"]
 
[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.0.3"

[[bin]]
name = "mn"
path = "src/main.rs"

[features]
default = ["rustls-tls"]
native-tls = ["matrix-sdk/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls"]
